--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pg": "^8.16.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "twilio": "^5.7.1",
     "typeorm": "^0.3.25"
   },
   "devDependencies": {
@@ -51,6 +52,7 @@
     "@types/node": "^22.10.7",
     "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.2",
+    "@types/twilio": "^3.19.2",
     "class-validator": "^0.14.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
